fixed overlap issues after net score was added to stats

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -113,7 +113,7 @@ h1{
   padding:10px;
   box-shadow:2px 2px #2E3532;
   border-radius:5%;
-  height: 160px;
+  height: 190px;
   border: 5px solid grey;
 }
 
